Tasks list with components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,33 +1,14 @@
 <div>
   <div class="container">
-      <div>
-        <input [(ngModel)]="newTask">
-        <button (click)="add()">Dodaj</button>
-      </div>
+    <app-add-task (emitTask)='add($event)'></app-add-task>
   </div>
 
   <div class="container">
     <div>
-      <ng-container *ngIf="tasksList.length > 0; else noTasks">
-      <ul>
-        <li *ngFor="let task of tasksList">
-            {{task}}
-            <button (click)="remove(task)">Usuń</button>
-            <button (click)="done(task)">Zrobione</button>
-        </li>
-      </ul>
-    </ng-container>
-    <ng-template #noTasks>
-      <p>Brak zadań</p>
-    </ng-template>
+      <app-todo-task [tasksList]='tasksList' (emitDone)='done($event)' (emitRemove)='remove($event)'></app-todo-task>
     </div>
     <div>
-      <p>Wykonanych zadań: {{tasksDone.length}}</p>
-      <ul>
-        <li *ngFor="let taskDone of tasksDone">
-          {{taskDone}}
-        </li>
-      </ul>
+      <app-done-task [tasksDone]='tasksDone'></app-done-task>
     </div>
   </div>
 </div>
