--- a/src/app/todo-task/todo-task.component.html
+++ b/src/app/todo-task/todo-task.component.html
@@ -1,7 +1,8 @@
 <div>
   <ng-container *ngIf="tasksList.length > 0; else noTasks">
+    <p [ngStyle]="{color: getColor()}">Zadania do wykonania: {{tasksList.length}}</p>
     <ul>
-      <li *ngFor="let task of tasksList">
+      <li *ngFor="let task of tasksList; let odd = odd"  [ngClass]="{'odd-li': odd, 'last-li': tasksList.length===1}">
         {{task}}
         <button (click)="remove(task)">Usuń</button>
         <button (click)="done(task)">Zrobione</button>
