--- a/src/app/todo-task/todo-task.component.html
+++ b/src/app/todo-task/todo-task.component.html
@@ -4,8 +4,8 @@
     <ul>
       <li *ngFor="let task of tasksList; let odd = odd"  [ngClass]="{'odd-li': odd, 'last-li': tasksList.length===1}">
         {{task}}
-        <button (click)="remove(task)">Usuń</button>
-        <button (click)="done(task)">Zrobione</button>
+        <button type="button" class="btn btn-danger" (click)="remove(task)">Usuń</button>
+        <button type="button" class="btn btn-success" (click)="done(task)">Zrobione</button>
       </li>
     </ul>
   </ng-container>
