--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,14 @@
 <div>
   <div class="container">
-    <app-add-task (emitTask)='add($event)'></app-add-task>
+    <app-add-task></app-add-task>
   </div>
 
   <div class="container">
     <div>
-      <app-todo-task [tasksList]='tasksList' (emitDone)='done($event)' (emitRemove)='remove($event)'></app-todo-task>
+      <app-todo-task></app-todo-task>
     </div>
     <div>
-      <app-done-task [tasksDone]='tasksDone'></app-done-task>
+      <app-done-task></app-done-task>
     </div>
   </div>
 </div>
