Task class added

--- a/src/app/done-task/done-task.component.html
+++ b/src/app/done-task/done-task.component.html
@@ -2,7 +2,7 @@
   <p>Wykonanych zadań: {{tasksDone.length}}</p>
   <ul>
     <li *ngFor="let taskDone of tasksDone">
-      {{taskDone}}
+      {{taskDone.name}}
     </li>
   </ul>
 </div>
