--- a/src/app/todo-task/todo-task.component.html
+++ b/src/app/todo-task/todo-task.component.html
@@ -3,7 +3,7 @@
     <p [ngStyle]="{color: getColor()}">Zadania do wykonania: {{tasksList.length}}</p>
     <ul>
       <li *ngFor="let task of tasksList; let odd = odd"  [ngClass]="{'odd-li': odd, 'last-li': tasksList.length===1}">
-        {{task}}
+        {{task.name}}
         <button type="button" class="btn btn-danger" (click)="remove(task)">Usuń</button>
         <button type="button" class="btn btn-success" (click)="done(task)">Zrobione</button>
       </li>
