--- a/src/app/todo-task/todo-task.component.html
+++ b/src/app/todo-task/todo-task.component.html
@@ -2,8 +2,8 @@
   <ng-container *ngIf="tasksList.length > 0; else noTasks">
     <p [ngStyle]="{color: getColor()}">Zadania do wykonania: {{tasksList.length}}</p>
     <ul>
-      <li appDate [date]='task.created' *ngFor="let task of tasksList; let odd = odd"  [ngClass]="{'odd-li': odd, 'last-li': tasksList.length===1}">
-        {{task.name}}
+      <li appDate [date]='task.created' *ngFor="let task of tasksList | sortName; let odd = odd"  [ngClass]="{'odd-li': odd, 'last-li': tasksList.length===1}">
+        {{task.name | transformTask: '!'}}
         <button type="button" class="btn btn-danger" (click)="remove(task)">Usuń</button>
         <button type="button" class="btn btn-success" (click)="done(task)">Zrobione</button>
       </li>
